# watson-vision

./: .gitattributes  .gitignore  2024-field.blend  Cargo.toml  Cross.toml  Dockerfile  README.md  config.json  install-orangepi.sh
setup-docker/: Cargo.toml
setup-docker/src/: main.rs
setup-orangepi/: Cargo.toml  Dockerfile
setup-orangepi/src/: main.rs
src/: config.rs  index.html  main.rs  nt.rs  types.rs
src/nt/: client.rs
src/pipeline/: camera_pose_estimator.rs  capture.rs  fiducial_detector.rs
